5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/1168/executions/1575_994.log
== SUBMITION (2019-03-11 11:02:13) 
-- CODE:
print(Universidade Federal do Ama")
-- EXECUTION TIME:
0.208696
-- ERROR:
  File "/home/codebench/codes/1575/994/main.py", line 1
    print(Universidade Federal do Ama")
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 11:02:31) 
-- CODE:
print(Universidade Federal do Ama")
-- ERROR:
File "XXXX", line 1
    print(Universidade Federal do Ama")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 11:03:27) 
-- CODE:
print(Universidade Federal do Ama")
-- ERROR:
File "XXXX", line 1
    print(Universidade Federal do Ama")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
